<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/forgotten_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgotten_password"
        android:textSize="32dp"
        android:layout_marginBottom="256dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotten_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_forgotten_mail"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@id/forgotten_title"
        app:layout_constraintStart_toStartOf="@id/forgotten_title"
        app:layout_constraintTop_toBottomOf="@id/forgotten_title" />

    <LinearLayout
        android:id="@+id/forgotten_input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@id/forgotten_textView"
        app:layout_constraintStart_toStartOf="@id/forgotten_textView"
        app:layout_constraintTop_toBottomOf="@id/forgotten_textView">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/generic_validate"
        app:layout_constraintStart_toStartOf="@+id/forgotten_input_password"
        app:layout_constraintTop_toBottomOf="@+id/forgotten_input_password" />

</androidx.constraintlayout.widget.ConstraintLayout>