<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="register"
            type="com.efficom.efid.data.model.request.RegisterRequest" />
        <variable
            name="viewModel"
            type="com.efficom.efid.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:fillViewport="true">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/register_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/login_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    android:text="@string/login_register"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/register_editTextNom"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    android:ems="10"
                    android:hint="@string/login_nom"
                    android:inputType="textEmailAddress"
                    android:text="@={register.nom}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_title" />

                <EditText
                    android:id="@+id/register_editTextPrenom"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/login_prenom"
                    android:text="@={register.prenom}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/register_editTextNom"/>

                <EditText
                    android:id="@+id/register_editTextTextEmailAddress"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/login_username"
                    android:inputType="textEmailAddress"
                    android:text="@={register.email}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/register_editTextPrenom" />

                <EditText
                    android:id="@+id/register_editTextTextPassword"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:text="@={register.password}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_editTextTextEmailAddress" />

                <EditText
                    android:id="@+id/register_editTextTextConfirmPassword"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/login_confirm_password"
                    android:inputType="textPassword"
                    android:text="@={register.confPassword}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_editTextTextPassword" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@id/register_connect_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/register_editTextTextConfirmPassword" />

                <Button
                    android:id="@+id/register_connect_btn"
                    android:layout_width="275dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/generic_validate"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toTopOf="@+id/register_return_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/register_return_btn"
                    android:layout_width="275dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="64dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/generic_return"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ProgressBar
                    android:id="@+id/register_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>
