<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="login"
            type="com.efficom.efid.data.model.request.LoginRequest" />
        <variable
            name="viewModel"
            type="com.efficom.efid.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/login_title"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:layout_marginBottom="256dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/login_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="@id/login_title"
            app:layout_constraintStart_toStartOf="@id/login_title"
            app:layout_constraintTop_toBottomOf="@id/login_title"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_username"
                    android:text="@={login.email}"/>

            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_username"
                    android:text="@={login.password}"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/login_connect_btn"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/custom_button"
            android:onClick="@{() -> viewModel.connectUser(login)}"
            android:text="@string/login_button"
            android:textColor="@android:color/white"
            android:layout_marginTop="64dp"
            app:layout_constraintStart_toStartOf="@id/login_title"
            app:layout_constraintTop_toBottomOf="@id/login_input"/>

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forgotten_password"
            app:layout_constraintBottom_toBottomOf="@id/login_connect_btn"
            app:layout_constraintEnd_toEndOf="@id/login_input"
            app:layout_constraintTop_toTopOf="@id/login_connect_btn" />

        <ProgressBar
            android:id="@+id/login_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
